--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "discord-input",
   "version": "1.0.0",
   "description": "Get's user input through another message that is sent.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
